<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEditDelDlg"
        android:textSize="28sp"
        android:textStyle="bold"/>
<Button
    android:id="@+id/editBTN"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/textEditBTN"
    android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/newDeleteBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textNewDeleteBTN"/>

    <Button
        android:id="@+id/cancelBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textCancelBTN"/>
</LinearLayout>