<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/productNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintProductNameET"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/productPriceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintProductPriceET"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/productWeightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintProductWeightET"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/addToBasketBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textAddToBasket"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listViewLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>