<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/productNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textProductNameTV"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/productIdHeaderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductIdTV"
                android:textAlignment="viewStart"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/productPriceHeaderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductPriceTV"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/productWeightHeaderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductWeightTV"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalPriceHeaderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textTotalPriceTV"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/productIdTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductIdTV"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/productPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductPriceTV"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/productWeightTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textProductWeightTV"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textTotalPriceTV"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>